<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="match_parent"
        android:layout_height="37.5dp"
        android:gravity="center|top"
        android:text="@string/registration_form"
        android:textColor="@color/font_color"
        android:textSize="@dimen/text_size_xlarge" />

    <ScrollView
        android:id="@+id/form_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registration_first_name_editText"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_name"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="25" />

            <EditText
                android:id="@+id/registration_phone_editText"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_phone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10" />

            <EditText
                android:id="@+id/registration_email_editText"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registration_password_editText"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="15" />

            <EditText
                android:id="@+id/registration_confirm_password_editText"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="15" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/registration_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:background="@color/green"
        android:text="@string/sign_up"
        android:textColor="@color/font_color"
        android:textSize="@dimen/button_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/padding_large"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/already_have_acct_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:id="@+id/registration_login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/already_have_acct_textView"
            android:layout_toRightOf="@+id/already_have_acct_textView"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/font_color"
            android:textSize="@dimen/button_text_size" />
    </RelativeLayout>
</LinearLayout>